# isb-2026

./: .gitignore  02_decrypted.txt  02_encrypted.txt  02_frequency_analysis.txt  02_key.txt  02_key_found.txt  CMakeLists.txt  Gen_Cpp.cpp  Gen_java.java  Gen_py.py  Generator.cpp  Generator.java  Python.txt  README.md  Task1_encrypted_text.txt  Task1_encryption_key.txt  Task1_lab1.py  Task1_original_text.txt  Task2_decrypted_text.txt  Task2_frequency_analysis.txt  Task2_lab1.py  Task2_original_text.txt  Text2_key.txt  alphabet.py  caeser.py  cipher.txt  cipher_key.txt  cipher_text.txt  cod16.txt  conclusion.txt  config.py  const.py  constants.hpp  constants.java  constants.py  constants.txt  cpp_generate.cpp  cpp_generator.cpp  cpp_seq.txt  cpp_sequence.txt  (+105 more)
lab_2/: .gitignore  C++_generator.cpp  CMakeLists.txt  CMakePresets.json  CONSTS.py  C_gen_1000.txt  CppGenerate.cpp  GenJava.java  Generator.cpp  Generator.java  Generator_Java.java  JavaGenerated.txt  JavaGenerator.java  Main.java  NIST.py  NIST_ALL_RESULTS_20260317_165724.txt  NIST_checks.py  NIST_test.py  Nist_tests.py  Output.txt  PRNG_c++.cpp  PRNG_java.java  PRNG_python.py  README.md  REPORT.md  RandomBitsGenerator.java  RandomGeneratorJava.java  all.py  analyze.py  bits_cpp.txt  bits_java.txt  bits_python.txt  c++.txt  c++_sequence.txt  c_generator.c  c_prng.c  cgenerator.cpp  check_NIST.py  code_lab2.py  complete_lab_work.py  (+145 more)
lab_2/cpp/: CMakeLists.txt  nist_tests.py  results.txt
lab_2/gen_bits/: cpp_gen.txt  java_gen.txt  python_gen.txt
lab_2/generate/: CMakeLists.txt  generator.cpp  generator.java  generator.py
lab_2/generator/: generator_Java.java  java.txt  python.txt
lab_2/generators/: C++.txt  CMakeLists.txt  CmakeLists.txt  Generator.cpp  Generator.java  Generator.py  Java.txt  constants.txt  cpp.txt  gen.cpp  generator.cpp  generator.java  generator.py  generator_C++.cpp  generator_Java.java  generator_cpp.cpp  generator_python.py  java.txt  py.txt  python.txt
lab_2/java/: Generator.java  Main.java  NistTests.java  nist_tests.py  results.txt
lab_2/lab2/: Gen.java  gen.cpp  gen.py  nist_tests.py  result.txt  seq_cpp.txt  seq_java.txt  seq_py.txt
lab_2/laba_2/: nist_test.py  results.txt
lab_2/out_cpp/: longest_run_result.txt  monobit_result.txt  runs_result.txt  выводы.txt
lab_2/out_java/: longest_run_result.txt  monobit_result.txt  runs_result.txt  выводы.txt
lab_2/part_1/: generator_c.cpp  generator_j.java  seq_j.txt
lab_2/part_2/: conclsion.txt  const.py  main.py  results.txt
lab_2/sequence/: nist_report.txt  nist_report_final.txt  nist_test_sequence.py
lab_2/sequences/: C++.txt  C.txt  Java.txt  cpp_seq.txt  java_seq.txt  py_seq.txt  seq_cpp.txt  seq_java.txt  seq_python.txt
lab_2/task/: C++.txt  CMakeLists.txt  Lab2.py  Main.java  REPORT.md  cpp_random.txt  cpp_random_vec.txt  data.txt  java_random.txt  java_random_vec.txt  main.cpp  main.py  nist_tests.py  py_random_vec.txt  results.txt  rng.cpp  rng.java  (+1 more)
(+1008 files in other folders)
